fixing z-index of modal to be over the search criteria

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -152,7 +152,7 @@
   align-items: center;
   justify-content: center;
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   background-color: rgba(0, 0, 0, 0.7);
 }
 
